--- a/config/variables.properties
+++ b/config/variables.properties
@@ -22,3 +22,5 @@ transaction.commission=10
 promo.code.discount=30
 #\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043F\u0440\u043E\u043C\u043E\u043A\u043E\u0434\u0430
 promo.code.name=NEWUSER30
+#\u0421\u043A\u043E\u043B\u044C\u043A\u043E \u0430\u043A\u0442\u0438\u0432\u043D\u0430 \u0437\u0430\u044F\u0432\u043A\u0430, \u0446\u0435\u043B\u043E\u0435(\u043C\u0438\u043D\u0443\u0442\u044B)
+deal.active.time=15
