--- a/config/variables.properties
+++ b/config/variables.properties
@@ -28,3 +28,5 @@ deal.active.time=15
 wallet.btc=qwlornwelgjngjngrgjerngkrengkjreng
 #\u0410\u0434\u0440\u0435\u0441 \u043A\u043E\u0448\u0435\u043B\u044C\u043A\u0430 LTC \u0434\u043B\u044F \u043F\u0440\u043E\u0434\u0430\u0436\u0438
 wallet.ltc=12qwr'ihqwirhqblti23btwqtgwe4tg
+#\u041F\u0440\u043E\u0446\u0435\u043D\u0442 \u043E\u0442 \u0441\u0443\u043C\u043C\u044B \u0441\u0434\u0435\u043B\u043E\u043A \u0434\u043B\u044F \u0440\u0435\u0444\u0435\u0440\u0430\u043B\u043E\u0432
+referral.percent=5
