--- a/config/variables.properties
+++ b/config/variables.properties
@@ -1,36 +1,36 @@
-#\u041A\u0443\u0440\u0441 \u0434\u043E\u043B\u043B\u0430\u0440\u0430, \u0446\u0435\u043B\u043E\u0435/\u0434\u0440\u043E\u0431\u044C
+#kurs dollara
 course.usd=100
-#\u0424\u0438\u043A\u0441 \u0440\u0443\u0431\u043B\u0435\u0439, \u0446\u0435\u043B\u043E\u0435
+#fix rubley
 fix.rub=2000
-#\u0424\u0438\u043A\u0441 \u043A\u043E\u043C\u0438\u0441\u0441\u0438\u044F, \u0446\u0435\u043B\u043E\u0435
+#fix komissiya
 commission.fix=200
-#\u041A\u043E\u043C\u0438\u0441\u0441\u0438\u044F, \u0446\u0435\u043B\u043E\u0435
+#komissiya
 commission.main=3
-#\u0421\u0441\u044B\u043B\u043A\u0430 \u043D\u0430 \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u0430, \u0432\u043C\u0435\u0441\u0442\u0435 \u0441 https://
+#ssilka na operatora, vmeste s https://
 operator.link=https://t.me/RUB24BTC
-#\u0428\u0430\u043D\u0441 \u043B\u043E\u0442\u0435\u0440\u0435\u0438, \u0446\u0435\u043B\u043E\u0435/\u0434\u0440\u043E\u0431\u044C
+#shans loterei
 lottery.chance=2
-#\u041C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u0443\u043C\u043C\u0430 \u043F\u043E\u043A\u0443\u043F\u043A\u0438 BTC(\u0432 BTC), \u0446\u0435\u043B\u043E\u0435/\u0434\u0440\u043E\u0431\u044C
+#min summa pokupki BTC(v BTC)
 deal.buy.sum.min.btc=0.0001
-#\u041C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u0443\u043C\u043C\u0430 \u043F\u043E\u043A\u0443\u043F\u043A\u0438 LTC(\u0432 LTC), \u0446\u0435\u043B\u043E\u0435/\u0434\u0440\u043E\u0431\u044C
+#min summa pokupki LTC(v LTC)
 deal.buy.sum.min.ltc=1
-#\u041C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u0443\u043C\u043C\u0430 \u043F\u043E\u043A\u0443\u043F\u043A\u0438 USDT(\u0432 USDT), \u0446\u0435\u043B\u043E\u0435/\u0434\u0440\u043E\u0431\u044C
+#min summa pokupki USDT(v USDT)
 deal.buy.sum.min.usdt=10
-#\u0422\u0440\u0430\u043D\u0437\u0430\u043A\u0446\u0438\u043E\u043D\u043D\u0430\u044F \u043A\u043E\u043C\u0438\u0441\u0441\u0438\u044F, \u0446\u0435\u043B\u043E\u0435/\u0434\u0440\u043E\u0431\u044C
+#komissiya transakcii
 transaction.commission=10
-#\u0421\u043A\u0438\u0434\u043A\u0430 \u043E\u0442 \u043F\u0440\u043E\u043C\u043E\u043A\u043E\u0434\u0430, \u0446\u0435\u043B\u043E\u0435
+#skidka ot promocoda
 promo.code.discount=30
-#\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043F\u0440\u043E\u043C\u043E\u043A\u043E\u0434\u0430
+#nazanie promokoda
 promo.code.name=NEWUSER30
-#\u0421\u043A\u043E\u043B\u044C\u043A\u043E \u0430\u043A\u0442\u0438\u0432\u043D\u0430 \u0437\u0430\u044F\u0432\u043A\u0430, \u0446\u0435\u043B\u043E\u0435(\u043C\u0438\u043D\u0443\u0442\u044B)
+#skolko minut aktivna zayavka
 deal.active.time=15
-#\u0410\u0434\u0440\u0435\u0441 \u043A\u043E\u0448\u0435\u043B\u044C\u043A\u0430 BTC \u0434\u043B\u044F \u043F\u0440\u043E\u0434\u0430\u0436\u0438
+#adres koshelka BTC dlya prodaji
 wallet.btc=qweqweqweqwe
-#\u0410\u0434\u0440\u0435\u0441 \u043A\u043E\u0448\u0435\u043B\u044C\u043A\u0430 LTC \u0434\u043B\u044F \u043F\u0440\u043E\u0434\u0430\u0436\u0438
+#adres koshelka LTC dlya prodaji
 wallet.ltc=12qwr'ihqwirhqblti23btwqtgwe4tg
-#\u041F\u0440\u043E\u0446\u0435\u043D\u0442 \u043E\u0442 \u0441\u0443\u043C\u043C\u044B \u0441\u0434\u0435\u043B\u043E\u043A \u0434\u043B\u044F \u0440\u0435\u0444\u0435\u0440\u0430\u043B\u043E\u0432, \u0446\u0435\u043B\u043E\u0435/\u0434\u0440\u043E\u0431\u044C
+#procent ot summi sdelok referalov
 referral.percent=5
-#\u041C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u0443\u043C\u043C\u0430 \u0432\u044B\u0432\u043E\u0434\u0430 \u0440\u0435\u0444\u0435\u0440\u0430\u043B\u044C\u043D\u044B\u0445 \u0434\u0435\u043D\u0435\u0433, \u0446\u0435\u043B\u043E\u0435
+#min summa dlya vivoda referalnih deneg
 referral.min.sum=500
-#\u0427\u0430\u0442 \u0430\u0439\u0434\u0438 \u043A\u0430\u043D\u0430\u043B\u0430 \u0434\u043B\u044F \u043E\u0442\u043F\u0440\u0430\u0432\u043A\u0438 \u043E\u0442\u0437\u044B\u0432\u043E\u0432
-channel.chat.id=123123
+#chat id dlya otpravki otzivov
+channel.chat.id=-1001688047377
