комиссии под валюту

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -1,11 +1,41 @@
 #kurs dollara
 course.usd=100
-#fix rubley
-fix.rub=2000
-#fix komissiya
-commission.fix=200
-#komissiya
-commission.main=3
+#fix rubley pokupka btc
+fix.rub.buy.btc=2000
+#fix rubley pokupka ltc
+fix.rub.buy.ltc=2000
+#fix rubley pokupka usdt
+fix.rub.buy.usdt=2000
+#fix rubley prodaja btc
+fix.rub.sell.btc=2000
+#fix rubley prodaja ltc
+fix.rub.sell.ltc=2000
+#fix rubley prodaja usdt
+fix.rub.sell.usdt=2000
+#fix komissiya pokupka btc
+commission.fix.buy.btc=75
+#fix komissiya pokupka ltc
+commission.fix.buy.ltc=75
+#fix komissiya pokupka usdt
+commission.fix.buy.usdt=75
+#fix komissiya prodaja btc
+commission.fix.sell.btc=75
+#fix komissiya prodaja ltc
+commission.fix.sell.ltc=75
+#fix komissiya prodaja usdt
+commission.fix.sell.usdt=75
+#komissiya pokupka btc
+commission.main.buy.btc=3
+#komissiya pokupka ltc
+commission.main.buy.ltc=3
+#komissiya pokupka usdt
+commission.main.buy.usdt=3
+#komissiya prodaja btc
+commission.main.sell.btc=3
+#komissiya prodaja ltc
+commission.main.sell.ltc=3
+#komissiya prodaja usdt
+commission.main.sell.usdt=3
 #ssilka na operatora, vmeste s https://
 operator.link=https://t.me/RUB24BTC
 #shans loterei
@@ -16,8 +46,12 @@ deal.buy.sum.min.btc=0.0001
 deal.buy.sum.min.ltc=1
 #min summa pokupki USDT(v USDT)
 deal.buy.sum.min.usdt=10
-#komissiya transakcii
-transaction.commission=10
+#komissiya transakcii btc
+transaction.commission.btc=0
+#komissiya transakcii ltc
+transaction.commission.ltc=0
+#komissiya transakcii usdt
+transaction.commission.usdt=0
 #skidka ot promocoda
 promo.code.discount=30
 #nazanie promokoda
@@ -34,5 +68,5 @@ referral.percent=5
 referral.min.sum=500
 #chat id dlya otpravki otzivov
 channel.chat.id=-1001688047377
-#voznagrajdenie za
+#voznagrajdenie za otziv
 review.prise=20
