комиссии под валюту

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -62,6 +62,8 @@ deal.active.time=15
 wallet.btc=qweqweqweqwe
 #adres koshelka LTC dlya prodaji
 wallet.ltc=12qwr'ihqwirhqblti23btwqtgwe4tg
+#adres koshelka USDT dlya prodaji
+wallet.usdt=12qwr'ihqwirhqblti23btwqtgwe4tg
 #procent ot summi sdelok referalov
 referral.percent=5
 #min summa dlya vivoda referalnih deneg
