--- a/config/variables.properties
+++ b/config/variables.properties
@@ -1,49 +1,49 @@
 #kurs dollara
-course.usd=100
+course.usd=85
 #fix rubley pokupka btc
 fix.rub.buy.btc=2000
 #fix rubley pokupka ltc
-fix.rub.buy.ltc=2000
+fix.rub.buy.ltc=2200
 #fix rubley pokupka usdt
 fix.rub.buy.usdt=2000
 #fix rubley prodaja btc
-fix.rub.sell.btc=2000
+fix.rub.sell.btc=5000
 #fix rubley prodaja ltc
-fix.rub.sell.ltc=2000
+fix.rub.sell.ltc=2400
 #fix rubley prodaja usdt
 fix.rub.sell.usdt=2000
 #fix komissiya pokupka btc
-commission.fix.buy.btc=75
+commission.fix.buy.btc=102
 #fix komissiya pokupka ltc
-commission.fix.buy.ltc=75
+commission.fix.buy.ltc=70
 #fix komissiya pokupka usdt
-commission.fix.buy.usdt=75
+commission.fix.buy.usdt=100
 #fix komissiya prodaja btc
-commission.fix.sell.btc=75
+commission.fix.sell.btc=300
 #fix komissiya prodaja ltc
-commission.fix.sell.ltc=75
+commission.fix.sell.ltc=200
 #fix komissiya prodaja usdt
-commission.fix.sell.usdt=75
+commission.fix.sell.usdt=100
 #komissiya pokupka btc
-commission.main.buy.btc=3
+commission.main.buy.btc=4
 #komissiya pokupka ltc
 commission.main.buy.ltc=3
 #komissiya pokupka usdt
-commission.main.buy.usdt=3
+commission.main.buy.usdt=4.2
 #komissiya prodaja btc
-commission.main.sell.btc=3
+commission.main.sell.btc=8
 #komissiya prodaja ltc
-commission.main.sell.ltc=3
+commission.main.sell.ltc=5.5
 #komissiya prodaja usdt
-commission.main.sell.usdt=3
+commission.main.sell.usdt=8
 #ssilka na operatora, vmeste s https://
-operator.link=https://t.me/RUB24BTC
+operator.link=https://t.me/BTC24MONEY
 #shans loterei
-lottery.chance=2
+lottery.chance=4
 #min summa pokupki BTC(v BTC)
 deal.buy.sum.min.btc=0.0001
 #min summa pokupki LTC(v LTC)
-deal.buy.sum.min.ltc=1
+deal.buy.sum.min.ltc=0.1
 #min summa pokupki USDT(v USDT)
 deal.buy.sum.min.usdt=10
 #komissiya transakcii btc
@@ -51,26 +51,32 @@ transaction.commission.btc=0
 #komissiya transakcii ltc
 transaction.commission.ltc=0
 #komissiya transakcii usdt
-transaction.commission.usdt=0
+transaction.commission.usdt=3
 #skidka ot promocoda
 promo.code.discount=30
 #nazanie promokoda
 promo.code.name=NEWUSER30
 #skolko minut aktivna zayavka
-deal.active.time=2
+deal.active.time=15
 #adres koshelka BTC dlya prodaji
-wallet.btc=qweqweqweqwe
+wallet.btc=bc1q4f596sakdjk5h6jf03v420w76t0yp7pws42wvs
 #adres koshelka LTC dlya prodaji
-wallet.ltc=12qwr'ihqwirhqblti23btwqtgwe4tg
+wallet.ltc=ltc1qr6h0sahrlrd804sg7yry5qs3ta2zujva4eslqn
 #adres koshelka USDT dlya prodaji
-wallet.usdt=12qwr'ihqwirhqblti23btwqtgwe4tg
+wallet.usdt=TJcZR2K3JXi5Z7XCnNaCqmG3d5xfSAXBVE
 #procent ot summi sdelok referalov
-referral.percent=5
+referral.percent=1
 #min summa dlya vivoda referalnih deneg
 referral.min.sum=500
 #chat id dlya otpravki otzivov
-channel.chat.id=-1001688047377
+channel.chat.id=-1001783311190
 #voznagrajdenie za otziv
-review.prise=20
+review.prise=17
 #kurs USDT
-usdt.course=1
+usdt.course=0.9
+#min summa prodaji BTC(v BTC)
+deal.sell.sum.min.btc=0.0001
+#min summa prodaji LTC(v LTC)
+deal.sell.sum.min.ltc=0.1
+#min summa prodaji USDT(v USDT)
+deal.sell.sum.min.usdt=10
