включение/выключение ранговой скидки для всех

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -80,3 +80,5 @@ deal.sell.sum.min.btc=0.0001
 deal.sell.sum.min.ltc=0.1
 #min summa prodaji USDT(v USDT)
 deal.sell.sum.min.usdt=10
+#true - rangovaya sdelka vkluchena dlya vseh, false - rangovaya sdelka vykluchena dlya vseh
+deal.rank.discount.enable=true
