--- a/config/currencies_turning.properties
+++ b/config/currencies_turning.properties
@@ -1,6 +1,6 @@
-buy.BITCOIN=true
-buy.LITECOIN=true
+buy.BITCOIN=false
+buy.LITECOIN=false
 buy.USDT=true
-sell.BITCOIN=false
-sell.LITECOIN=true
+sell.BITCOIN=true
+sell.LITECOIN=false
 sell.USDT=true
