--- a/config/currencies_turning.properties
+++ b/config/currencies_turning.properties
@@ -1,6 +1,6 @@
-buy.BITCOIN=false
-buy.LITECOIN=false
+buy.BITCOIN=true
+buy.LITECOIN=true
 buy.USDT=true
 sell.BITCOIN=true
-sell.LITECOIN=false
+sell.LITECOIN=true
 sell.USDT=true
