--- a/config/variables.properties
+++ b/config/variables.properties
@@ -81,4 +81,4 @@ deal.sell.sum.min.ltc=0.2
 #min summa prodaji USDT(v USDT)
 deal.sell.sum.min.usdt=20
 #true - rangovaya sdelka vkluchena dlya vseh, false - rangovaya sdelka vykluchena dlya vseh
-deal.rank.discount.enable=true
+deal.rank.discount.enable=false
