--- a/config/currencies_turning.properties
+++ b/config/currencies_turning.properties
@@ -1,6 +1,8 @@
 buy.BITCOIN=true
 buy.LITECOIN=true
 buy.USDT=true
+buy.MONERO=true
 sell.BITCOIN=true
 sell.LITECOIN=true
 sell.USDT=true
+sell.MONERO=true
