--- a/config/variables.properties
+++ b/config/variables.properties
@@ -6,36 +6,42 @@ fix.rub.buy.btc=2000
 fix.rub.buy.ltc=2200
 #fix rubley pokupka usdt
 fix.rub.buy.usdt=2000
+fix.rub.buy.xmr=2000
 #fix rubley prodaja btc
 fix.rub.sell.btc=5000
 #fix rubley prodaja ltc
 fix.rub.sell.ltc=2400
 #fix rubley prodaja usdt
 fix.rub.sell.usdt=2000
+fix.rub.sell.xmr=2000
 #fix komissiya pokupka btc
 commission.fix.buy.btc=102
 #fix komissiya pokupka ltc
 commission.fix.buy.ltc=70
 #fix komissiya pokupka usdt
 commission.fix.buy.usdt=100
+commission.fix.buy.xmr=100
 #fix komissiya prodaja btc
 commission.fix.sell.btc=300
 #fix komissiya prodaja ltc
 commission.fix.sell.ltc=200
 #fix komissiya prodaja usdt
 commission.fix.sell.usdt=100
+commission.fix.sell.xmr=100
 #komissiya pokupka btc
 commission.main.buy.btc=4
 #komissiya pokupka ltc
 commission.main.buy.ltc=3
 #komissiya pokupka usdt
 commission.main.buy.usdt=4.2
+commission.main.buy.xmr=4.2
 #komissiya prodaja btc
 commission.main.sell.btc=8
 #komissiya prodaja ltc
 commission.main.sell.ltc=5.5
 #komissiya prodaja usdt
 commission.main.sell.usdt=8
+commission.main.sell.xmr=8
 #ssilka na operatora, vmeste s https://
 operator.link=https://t.me/BTC24MONEY
 #shans loterei
@@ -46,12 +52,14 @@ deal.buy.sum.min.btc=0.001
 deal.buy.sum.min.ltc=0.1
 #min summa pokupki USDT(v USDT)
 deal.buy.sum.min.usdt=30
+deal.buy.sum.min.xmr=30
 #komissiya transakcii btc
 transaction.commission.btc=0
 #komissiya transakcii ltc
 transaction.commission.ltc=0
 #komissiya transakcii usdt
 transaction.commission.usdt=3
+transaction.commission.xmr=3
 #skidka ot promocoda
 promo.code.discount=30
 #nazanie promokoda
@@ -64,6 +72,7 @@ wallet.btc=bc1q4f596sakdjk5h6jf03v420w76t0yp7pws42wvs
 wallet.ltc=ltc1qr6h0sahrlrd804sg7yry5qs3ta2zujva4eslqn
 #adres koshelka USDT dlya prodaji
 wallet.usdt=TJcZR2K3JXi5Z7XCnNaCqmG3d5xfSAXBVE
+wallet.xmr=xmr wallet
 #procent ot summi sdelok referalov
 referral.percent=1
 #min summa dlya vivoda referalnih deneg
@@ -80,5 +89,6 @@ deal.sell.sum.min.btc=0.002
 deal.sell.sum.min.ltc=0.2
 #min summa prodaji USDT(v USDT)
 deal.sell.sum.min.usdt=20
+deal.sell.sum.min.xmr=20
 #true - rangovaya sdelka vkluchena dlya vseh, false - rangovaya sdelka vykluchena dlya vseh
 deal.rank.discount.enable=false
