Курс доллара для нескольких криптовалют.

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -1,5 +1,12 @@
 #kurs dollara
-course.usd=88.5
+course.usd.buy.btc=88.5
+course.usd.sell.btc= 55.0
+course.usd.buy.ltc= 1.4
+course.usd.sell.ltc= 55.0
+course.usd.buy.usdt = 155.55
+course.usd.sell.usdt = 123.0
+course.usd.buy.xmr= 11.1
+course.usd.sell.xmr= 33.0
 #fix rubley pokupka btc
 fix.rub.buy.btc=2000
 #fix rubley pokupka ltc
