раздельные переменные по dealType fiatCurrnecy cryptoCurrency

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -1,85 +1,91 @@
 #kurs dollara
 course.usd.buy.btc=88.5
-course.usd.sell.btc= 55.0
-course.usd.buy.ltc= 1.4
-course.usd.sell.ltc= 55.0
-course.usd.buy.usdt = 155.55
-course.usd.sell.usdt = 123.0
-course.usd.buy.xmr= 11.1
-course.usd.sell.xmr= 33.0
-#fix rubley pokupka btc
+course.usd.buy.ltc=1.4
+course.usd.buy.usdt=155.55
+course.usd.buy.xmr=11.1
+course.usd.sell.btc=55.0
+course.usd.sell.ltc=55.0
+course.usd.sell.usdt=123.0
+course.usd.sell.xmr=33.0
+############################
+#fix rubley
 fix.rub.buy.btc=2000
-#fix rubley pokupka ltc
 fix.rub.buy.ltc=2200
-#fix rubley pokupka usdt
 fix.rub.buy.usdt=2000
 fix.rub.buy.xmr=2000
-#fix rubley prodaja btc
 fix.rub.sell.btc=5000
-#fix rubley prodaja ltc
 fix.rub.sell.ltc=2400
-#fix rubley prodaja usdt
 fix.rub.sell.usdt=2000
 fix.rub.sell.xmr=2000
-#fix komissiya pokupka btc
-commission.fix.buy.btc=102
-#fix komissiya pokupka ltc
-commission.fix.buy.ltc=70
-#fix komissiya pokupka usdt
-commission.fix.buy.usdt=100
-commission.fix.buy.xmr=100
-#fix komissiya prodaja btc
-commission.fix.sell.btc=300
-#fix komissiya prodaja ltc
-commission.fix.sell.ltc=200
-#fix komissiya prodaja usdt
-commission.fix.sell.usdt=100
-commission.fix.sell.xmr=100
-#komissiya pokupka btc
-commission.main.buy.btc=4
-#komissiya pokupka ltc
-commission.main.buy.ltc=3
-#komissiya pokupka usdt
-commission.main.buy.usdt=4.2
-commission.main.buy.xmr=4.2
-#komissiya prodaja btc
-commission.main.sell.btc=8
-#komissiya prodaja ltc
-commission.main.sell.ltc=5.5
-#komissiya prodaja usdt
-commission.main.sell.usdt=8
-commission.main.sell.xmr=8
+fix.byn.buy.btc=2000
+fix.byn.buy.ltc=2200
+fix.byn.buy.usdt=2000
+fix.byn.buy.xmr=2000
+fix.byn.sell.btc=5000
+fix.byn.sell.ltc=2400
+fix.byn.sell.usdt=2000
+fix.byn.sell.xmr=2000
+############################
+#fix komissiya
+commission.fix.rub.buy.btc=102
+commission.fix.rub.buy.ltc=70
+commission.fix.rub.buy.usdt=100
+commission.fix.rub.buy.xmr=100
+commission.fix.rub.sell.btc=300
+commission.fix.rub.sell.ltc=200
+commission.fix.rub.sell.usdt=100
+commission.fix.rub.sell.xmr=100
+commission.fix.byn.buy.btc=102
+commission.fix.byn.buy.ltc=70
+commission.fix.byn.buy.usdt=100
+commission.fix.byn.buy.xmr=100
+commission.fix.byn.sell.btc=300
+commission.fix.byn.sell.ltc=200
+commission.fix.byn.sell.usdt=100
+commission.fix.byn.sell.xmr=100
+############################
+#osnovnaya komissiya
+commission.buy.btc=4
+commission.buy.ltc=3
+commission.buy.usdt=4.2
+commission.buy.xmr=4.2
+commission.sell.btc=8
+commission.sell.ltc=5.5
+commission.sell.usdt=8
+commission.sell.xmr=8
+############################
+#min summa
+deal.min.sum.buy.btc=0.001
+deal.min.sum.buy.ltc=0.1
+deal.min.sum.buy.usdt=30
+deal.min.sum.buy.xmr=30
+deal.min.sum.sell.btc=0.002
+deal.min.sum.sell.ltc=0.2
+deal.min.sum.sell.usdt=20
+deal.min.sum.sell.xmr=20
+############################
+#komissiya transakcii
+transaction.commission.btc=0
+transaction.commission.ltc=0
+transaction.commission.usdt=3
+transaction.commission.xmr=3
+############################
+#adres koshelka dlya prodaji
+wallet.btc=bc1q4f596sakdjk5h6jf03v420w76t0yp7pws42wvs
+wallet.ltc=ltc1qr6h0sahrlrd804sg7yry5qs3ta2zujva4eslqn
+wallet.usdt=TJcZR2K3JXi5Z7XCnNaCqmG3d5xfSAXBVE
+wallet.xmr=xmr wallet
+############################
 #ssilka na operatora, vmeste s https://
 operator.link=https://t.me/BTC24MONEY
 #shans loterei
 lottery.chance=100
-#min summa pokupki BTC(v BTC)
-deal.buy.sum.min.btc=0.001
-#min summa pokupki LTC(v LTC)
-deal.buy.sum.min.ltc=0.1
-#min summa pokupki USDT(v USDT)
-deal.buy.sum.min.usdt=30
-deal.buy.sum.min.xmr=30
-#komissiya transakcii btc
-transaction.commission.btc=0
-#komissiya transakcii ltc
-transaction.commission.ltc=0
-#komissiya transakcii usdt
-transaction.commission.usdt=3
-transaction.commission.xmr=3
 #skidka ot promocoda
 promo.code.discount=30
 #nazanie promokoda
 promo.code.name=NEWUSER30
 #skolko minut aktivna zayavka
 deal.active.time=15
-#adres koshelka BTC dlya prodaji
-wallet.btc=bc1q4f596sakdjk5h6jf03v420w76t0yp7pws42wvs
-#adres koshelka LTC dlya prodaji
-wallet.ltc=ltc1qr6h0sahrlrd804sg7yry5qs3ta2zujva4eslqn
-#adres koshelka USDT dlya prodaji
-wallet.usdt=TJcZR2K3JXi5Z7XCnNaCqmG3d5xfSAXBVE
-wallet.xmr=xmr wallet
 #procent ot summi sdelok referalov
 referral.percent=1
 #min summa dlya vivoda referalnih deneg
@@ -90,12 +96,5 @@ channel.chat.id=-1001783311190
 review.prise=17
 #kurs USDT
 usdt.course=0.9
-#min summa prodaji BTC(v BTC)
-deal.sell.sum.min.btc=0.002
-#min summa prodaji LTC(v LTC)
-deal.sell.sum.min.ltc=0.2
-#min summa prodaji USDT(v USDT)
-deal.sell.sum.min.usdt=20
-deal.sell.sum.min.xmr=20
 #true - rangovaya sdelka vkluchena dlya vseh, false - rangovaya sdelka vykluchena dlya vseh
 deal.rank.discount.enable=false
