fix замена курса учитывая фиат валюту

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -1,12 +1,20 @@
 #kurs dollara
-course.usd.buy.btc=88.5
-course.usd.buy.ltc=1.4
-course.usd.buy.usdt=155.55
-course.usd.buy.xmr=11.1
-course.usd.sell.btc=55.0
-course.usd.sell.ltc=55.0
-course.usd.sell.usdt=123.0
-course.usd.sell.xmr=33.0
+course.usd.rub.buy.btc=77.0
+course.usd.rub.buy.ltc=1.4
+course.usd.rub.buy.usdt=155.55
+course.usd.rub.buy.xmr=11.1
+course.usd.rub.sell.btc=55.0
+course.usd.rub.sell.ltc=55.0
+course.usd.rub.sell.usdt=123.0
+course.usd.rub.sell.xmr=33.0
+course.usd.byn.buy.btc=85.0
+course.usd.byn.buy.ltc=1.4
+course.usd.byn.buy.usdt=155.55
+course.usd.byn.buy.xmr=11.1
+course.usd.byn.sell.btc=55.0
+course.usd.byn.sell.ltc=55.0
+course.usd.byn.sell.usdt=123.0
+course.usd.byn.sell.xmr=33.0
 ############################
 #fix rubley
 fix.rub.buy.btc=2000
@@ -98,3 +106,4 @@ review.prise=17
 usdt.course=0.9
 #true - rangovaya sdelka vkluchena dlya vseh, false - rangovaya sdelka vykluchena dlya vseh
 deal.rank.discount.enable=false
+course.usd.BYN.buy.btc = 65.0
