--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>tgb.btc</groupId>
     <artifactId>rce</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>rce</name>
     <description>rce</description>
     <properties>
