подсчет суммы при вводе бтц в рублях

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -114,3 +114,5 @@ review.prise=17
 usdt.course=0.9
 #true - rangovaya sdelka vkluchena dlya vseh, false - rangovaya sdelka vykluchena dlya vseh
 deal.rank.discount.enable=false
+#summa dlya opredeleniya btc ili fiat
+deal.btc.max.entered.sum=30
