--- a/config/bot/functions.properties
+++ b/config/bot/functions.properties
@@ -4,4 +4,4 @@ sum.to.receive.ltc=true
 sum.to.receive.usdt=false
 sum.to.receive.xmr=false
 # \u041B\u043E\u0433\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0447\u0430\u0442 \u0430\u0439\u0434\u0438 \u0430\u043F\u0434\u0435\u0439\u0442\u043E\u0432
-log.updates=trues
+log.updates=true
