fix подсчета со скидкой

--- a/config/bot/functions.properties
+++ b/config/bot/functions.properties
@@ -1,6 +1,6 @@
 # \u0412\u0438\u0434\u043D\u0430 \u043B\u0438 \u0441\u0443\u043C\u043C\u0430 \u043A \u043F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u044E
-sum.to.receive.btc=true
-sum.to.receive.ltc=true
+sum.to.receive.btc=false
+sum.to.receive.ltc=false
 sum.to.receive.usdt=false
 sum.to.receive.xmr=false
 # \u041B\u043E\u0433\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0447\u0430\u0442 \u0430\u0439\u0434\u0438 \u0430\u043F\u0434\u0435\u0439\u0442\u043E\u0432
