--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - 
 logging.logback.rollingpolicy.max-file-size=50MB
 spring.config.import=file:config/bot/server.properties
 spring.main.allow-bean-definition-overriding=true
+server.servlet.session.tracking-modes=COOKIE
