--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/rce
 spring.datasource.username=barilo
 spring.datasource.password=37552109
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,3 +7,4 @@ logging.level.org.springframework.web=ERROR
 logging.file.name=rce.log
 logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 logging.logback.rollingpolicy.max-file-size=50MB
+spring.config.import=file:config/bot/server.properties
