delete api user

--- a/config/bot/server.properties
+++ b/config/bot/server.properties
@@ -5,3 +5,4 @@
 #server.ssl.keyAlias=tomcat
 #main.url=
 spring.datasource.url=jdbc:mysql://localhost:3306/rce
+spring.datasource.url=jdbc:mysql://localhost:3306/rce
