messages for new bot

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -116,3 +116,5 @@ usdt.course=0.9
 deal.rank.discount.enable=false
 #summa dlya opredeleniya btc ili fiat
 deal.btc.max.entered.sum=30
+#kurs byn-rub
+course.byn.rub=3.2
