referral for byn and rub

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -103,7 +103,7 @@ promo.code.name=NEWUSER30
 #skolko minut aktivna zayavka
 deal.active.time=15
 #procent ot summi sdelok referalov
-referral.percent=1
+referral.percent=10
 #min summa dlya vivoda referalnih deneg
 referral.min.sum=500
 #chat id dlya otpravki otzivov
@@ -116,5 +116,7 @@ usdt.course=0.9
 deal.rank.discount.enable=false
 #summa dlya opredeleniya btc ili fiat
 deal.btc.max.entered.sum=30
-#kurs byn-rub
-course.byn.rub=3.2
+#kurs byn-rub v BYN
+course.byn.rub=0.032
+#kurs rub-byn v BYN
+course.rub.byn=0.032
