--- a/config/bot/server.properties
+++ b/config/bot/server.properties
@@ -3,5 +3,5 @@
 #server.ssl.key-store-password=barilo37552109
 #server.ssl.keyStoreType=PKCS12
 #server.ssl.keyAlias=tomcat
-#main.url=
+main.url=http://localhost:8080
 spring.datasource.url=jdbc:mysql://localhost:3306/rce
