--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
         <profile>
             <id>local-getting-libraries</id>
             <activation>
-                <os>
-                    <family>unix</family>
-                </os>
+                <file>
+                    <exists>config/local.properties</exists>
+                </file>
             </activation>
             <dependencies>
                 <dependency>
@@ -30,14 +30,19 @@
                     <artifactId>rce-library</artifactId>
                     <version>1.0-SNAPSHOT</version>
                 </dependency>
+                <dependency>
+                    <groupId>tgb.btc</groupId>
+                    <artifactId>rce-web</artifactId>
+                    <version>1.0-SNAPSHOT</version>
+                </dependency>
             </dependencies>
         </profile>
         <profile>
             <id>jitpack-getting-libraries</id>
             <activation>
-                <os>
-                    <family>windows</family>
-                </os>
+                <file>
+                    <missing>config/local.properties</missing>
+                </file>
             </activation>
             <repositories>
                 <repository>
@@ -50,6 +55,11 @@
                     <groupId>com.github.barilo-egor</groupId>
                     <artifactId>rce-library</artifactId>
                     <version>c829c353e1</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.github.barilo-egor</groupId>
+                    <artifactId>rce-web</artifactId>
+                    <version>56e56fbac4</version>
                 </dependency>
             </dependencies>
         </profile>
