--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ build/
 /.mvn/wrapper/maven-wrapper.jar
 /.mvn/wrapper/maven-wrapper.properties
 
-application.properties
+src/main/resources/application.properties
 bot.properties
 config/antispam/picture
 *.log
