--- a/config/design/buttons.properties
+++ b/config/design/buttons.properties
@@ -20,3 +20,7 @@ PAID=\u042F \u043E\u043F\u043B\u0430\u0442\u0438\u043B(\u0430)
 BYN=BYN
 RUB=RUB
 UAH=UAH
+
+#\u0421\u043F\u043E\u0441\u043E\u0431 \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438
+STANDARD=STANDARD
+VIP=VIP
