turning delivery type

--- a/config/bot/modules.properties
+++ b/config/bot/modules.properties
@@ -3,4 +3,4 @@ referral.type=STANDARD
 first.deal.promo.type=STANDARD
 anti.spam=NONE
 review.prise=DYNAMIC
-delivery.type=STANDARD
+delivery.kind=STANDARD
