--- a/config/bot/functions.properties
+++ b/config/bot/functions.properties
@@ -7,3 +7,5 @@ sum.to.receive.xmr=false
 log.updates=true
 #\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u043E\u043B\u043E\u043D\u043E\u043A \u0432 \u043A\u043D\u043E\u043F\u043A\u0430\u0445 \u0442\u0438\u043F\u043E\u0432 \u043E\u043F\u043B\u0430\u0442\u044B
 payment.types.columns=2
+#\u0410\u0432\u0442\u043E\u0431\u044D\u043A\u0430\u043F \u0411\u0414 true/false
+auto.backup=true
