comission by delivery type

--- a/config/variables.properties
+++ b/config/variables.properties
@@ -34,6 +34,24 @@ fix.byn.sell.ltc=220
 fix.byn.sell.usdt=220
 fix.byn.sell.xmr=220
 ############################
+#fix rubley vip
+fix.vip.rub.buy.btc=2001
+fix.vip.rub.buy.ltc=2200
+fix.vip.rub.buy.usdt=2000
+fix.vip.rub.buy.xmr=2000
+fix.vip.rub.sell.btc=5000
+fix.vip.rub.sell.ltc=2400
+fix.vip.rub.sell.usdt=2000
+fix.vip.rub.sell.xmr=2000
+fix.vip.byn.buy.btc=150
+fix.vip.byn.buy.ltc=150
+fix.vip.byn.buy.usdt=150
+fix.vip.byn.buy.xmr=150
+fix.vip.byn.sell.btc=220
+fix.vip.byn.sell.ltc=220
+fix.vip.byn.sell.usdt=220
+fix.vip.byn.sell.xmr=220
+############################
 #fix komissiya
 commission.fix.rub.buy.btc=102
 commission.fix.rub.buy.ltc=70
@@ -51,6 +69,24 @@ commission.fix.byn.sell.btc=25
 commission.fix.byn.sell.ltc=22
 commission.fix.byn.sell.usdt=13
 commission.fix.byn.sell.xmr=12
+############################
+#fix komissiya vip
+commission.fix.vip.rub.buy.btc=102
+commission.fix.vip.rub.buy.ltc=70
+commission.fix.vip.rub.buy.usdt=100
+commission.fix.vip.rub.buy.xmr=100
+commission.fix.vip.rub.sell.btc=300
+commission.fix.vip.rub.sell.ltc=200
+commission.fix.vip.rub.sell.usdt=100
+commission.fix.vip.rub.sell.xmr=100
+commission.fix.vip.byn.buy.btc=16
+commission.fix.vip.byn.buy.ltc=15
+commission.fix.vip.byn.buy.usdt=12
+commission.fix.vip.byn.buy.xmr=15
+commission.fix.vip.byn.sell.btc=25
+commission.fix.vip.byn.sell.ltc=22
+commission.fix.vip.byn.sell.usdt=13
+commission.fix.vip.byn.sell.xmr=12
 ############################
 #osnovnaya komissiya
 commission.rub.buy.btc=4
@@ -70,6 +106,24 @@ commission.byn.sell.ltc=5.5
 commission.byn.sell.usdt=8
 commission.byn.sell.xmr=8
 ############################
+#osnovnaya komissiya vip
+commission.vip.rub.buy.btc=4
+commission.vip.rub.buy.ltc=3
+commission.vip.rub.buy.usdt=4.2
+commission.vip.rub.buy.xmr=4.2
+commission.vip.rub.sell.btc=8
+commission.vip.rub.sell.ltc=5.5
+commission.vip.rub.sell.usdt=8
+commission.vip.rub.sell.xmr=8
+commission.vip.byn.buy.btc=4
+commission.vip.byn.buy.ltc=3
+commission.vip.byn.buy.usdt=4.2
+commission.vip.byn.buy.xmr=4.2
+commission.vip.byn.sell.btc=8
+commission.vip.byn.sell.ltc=5.5
+commission.vip.byn.sell.usdt=8
+commission.vip.byn.sell.xmr=8
+############################
 #min summa
 deal.min.sum.buy.btc=0.001
 deal.min.sum.buy.ltc=0.1
@@ -85,6 +139,12 @@ transaction.commission.btc=0
 transaction.commission.ltc=0
 transaction.commission.usdt=3
 transaction.commission.xmr=3
+############################
+#komissiya transakcii vip
+transaction.commission.vip.btc=0
+transaction.commission.vip.ltc=0
+transaction.commission.vip.usdt=3
+transaction.commission.vip.xmr=3
 ############################
 #adres koshelka dlya prodaji
 wallet.btc=bc1q4f596sakdjk5h6jf03v420w76t0yp7pws42wvs
