--- a/config/variables.properties
+++ b/config/variables.properties
@@ -52,6 +52,10 @@ commission.fix.byn.sell.ltc=22
 commission.fix.byn.sell.usdt=13
 commission.fix.byn.sell.xmr=12
 ############################
+#fix komissiya vip
+commission.fix.vip.rub.buy.btc=102
+commission.fix.vip.byn.buy.btc=16
+############################
 #osnovnaya komissiya
 commission.rub.buy.btc=4
 commission.rub.buy.ltc=3
