--- a/config/bot/functions.properties
+++ b/config/bot/functions.properties
@@ -11,3 +11,4 @@ payment.types.columns=2
 allowed.deals.count=0
 #\u0410\u0432\u0442\u043E\u0431\u044D\u043A\u0430\u043F \u0411\u0414 true/false
 auto.backup=true
+vip.button.add.sum=true
