--- a/config/bot/server.properties
+++ b/config/bot/server.properties
@@ -5,3 +5,5 @@
 #server.ssl.keyAlias=tomcat
 main.url=http://localhost:8080
 spring.datasource.url=jdbc:mysql://localhost:3306/rce
+spring.mail.username=
+spring.mail.password=
