--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ spring.main.allow-bean-definition-overriding=true
 server.servlet.session.tracking-modes=COOKIE
 
 spring.mail.default-encoding=UTF-8
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.mail.ru
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.port=465
+spring.mail.properties.mail.smtps.ssl.checkserveridentity=true
+spring.mail.properties.mail.smtps.ssl.trust=*
+spring.mail.properties.mail.smtp.ssl.enable=true
