--- a/config/message.properties
+++ b/config/message.properties
@@ -46,3 +46,5 @@ user.information.main=<b>Chat ID:</b> %s<ln><ln><b>Username:</b> %s<ln><ln><b>\u
 user.information.without.referral.main=<b>Chat ID:</b> %s<ln><ln><b>Username:</b> %s<ln><ln><b>\u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043F\u0440\u043E\u0432\u0435\u0434\u0435\u043D\u043D\u044B\u0445 \u0441\u0434\u0435\u043B\u043E\u043A:</b> %s<ln><ln><b>\u0417\u0430\u0431\u0430\u043D\u0435\u043D:</b> %s<ln><ln><b>\u0410\u0434\u043C\u0438\u043D:</b> %s<ln><ln><b>\u0421\u043A\u043E\u043B\u044C\u043A\u043E \u0440\u0430\u0437 \u0432\u044B\u0438\u0433\u0440\u0430\u043B \u043B\u043E\u0442\u0435\u0440\u0435\u044E:</b> %s<ln><ln><b>\u041F\u0440\u0438\u0448\u0435\u043B \u043E\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F:</b> %s
 
 delivery.type.ask=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435\u0020\u0441\u043F\u043E\u0441\u043E\u0431\u0020\u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438
+
+menu.main.cabinet.message=\u0412\u044B \u043F\u0435\u0440\u0435\u0448\u043B\u0438 \u0432 \u043A\u0430\u0431\u0438\u043D\u0435\u0442 \u043F\u0430\u043D\u0435\u043B\u044C.
