оптовые, разделение на криптовалюты

--- a/config/bulk_discount.properties
+++ b/config/bulk_discount.properties
@@ -1,53 +1,47 @@
-rub.buy.500=0.5
-rub.buy.10000=0.75
-rub.buy.20000=1
-rub.buy.30000=1.25
-rub.buy.50000=1.5
-rub.buy.80000=1.75
-rub.buy.110000=2
-rub.buy.150000=2.25
-rub.buy.200000=2.5
-rub.buy.500000=2.75
-rub.buy.1000000=4.0
+rub.buy.btc.5000=0.5
+rub.buy.btc.10000=2.5
+rub.buy.btc.20000=3.5
+rub.buy.btc.30000=4.5
+rub.buy.btc.50000=5
+rub.buy.btc.80000=5.5
+rub.buy.btc.110000=6
+rub.buy.btc.150000=6.5
+rub.buy.btc.200000=7.5
+rub.buy.btc.500000=8
+rub.buy.btc.1000000=9
 
-rub.sell.500500=0.5
-rub.sell.10000500=0.75
-rub.sell.20000500=1
-rub.sell.30000500=1.25
-rub.sell.50000500=1.5
-rub.sell.80000500=1.75
-rub.sell.110000500=2
-rub.sell.150000500=2.25
-rub.sell.200000500=2.5
-rub.sell.500000500=2.75
-rub.sell.1000000500=3
-rub.sell.50050010=0.5
-rub.sell.100005010=0.75
-rub.sell.2000050010=1
-rub.sell.3000050=1.25
-rub.sell.5000050=1.5
-rub.sell.800001=1.75
-rub.sell.110001=2
-rub.sell.1500001=2.25
-rub.sell.2000001=2.5
-rub.sell.500001=2.75
-rub.sell.1000001=3
-rub.sell.8000011=1.75
-rub.sell.1100000=2
-rub.sell.15000050=2.25
-rub.sell.20000050=2.5
-rub.sell.50000050=2.75
-rub.sell.100000050=3
+byn.buy.btc.50=0
+byn.buy.btc.150=0.5
+byn.buy.btc.250=3
+byn.buy.btc.500=4.9
+byn.buy.btc.800=4.9
+byn.buy.btc.1500=5.3
+byn.buy.btc.2300=7.0
+byn.buy.btc.4000=7.5
+byn.buy.btc.6000=7.7
+byn.buy.btc.8000=7.9
+byn.buy.btc.10000=8.0
 
-byn.buy.5=0.5
-byn.buy.100=0.75
-byn.buy.200=1
-byn.buy.300=1.25
-byn.buy.500=1.5
-byn.buy.800=1.75
-byn.buy.1100=2
-byn.buy.1500=2.25
-byn.buy.2000=2.5
-byn.buy.5000=2.75
-byn.buy.11000 = 3.0
-byn.buy.123 = 123.0
+rub.sell.btc.5000=0.5
+rub.sell.btc.10000=2.5
+rub.sell.btc.20000=3.5
+rub.sell.btc.30000=4.5
+rub.sell.btc.50000=5
+rub.sell.btc.80000=5.5
+rub.sell.btc.110000=6
+rub.sell.btc.150000=6.5
+rub.sell.btc.200000=7.5
+rub.sell.btc.500000=8
+rub.sell.btc.1000000=9
+
+byn.sell.btc.50=0
+byn.sell.btc.150=0.5
+byn.sell.btc.250=3
+byn.sell.btc.500=3.0
+byn.sell.btc.800=4.0
+byn.sell.btc.1500=5.0
+byn.sell.btc.2300=6.0
+byn.sell.btc.4000=8
+byn.sell.btc.6000=8.5
+byn.sell.btc.8000=9
+byn.sell.btc.10000=9
