db properties + log config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
-spring.datasource.username=barilo
-spring.datasource.password=37552109
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-logging.level.tgb.btc=TRACE
-logging.level.org.springframework.web=INFO
-logging.file.name=rce.log
-logging.pattern.file= "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
-logging.logback.rollingpolicy.max-file-size=50MB
-spring.config.import=file:config/bot/server.properties
+logging.level.tgb.btc.rce=DEBUG
+logging.level.tgb.btc.library=DEBUG
+logging.level.tgb.btc.web=DEBUG
+spring.config.import=file:config/bot/server.properties,file:config/system/db.properties
 spring.main.allow-bean-definition-overriding=true
 server.servlet.session.tracking-modes=COOKIE
