--- a/config/system/db.properties
+++ b/config/system/db.properties
@@ -1,4 +1,7 @@
-spring.datasource.username=barilo
+spring.datasource.username=rce_user
 spring.datasource.password=37552109
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/rce
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
