--- a/config/system/db.properties
+++ b/config/system/db.properties
@@ -1,7 +1,6 @@
 spring.datasource.username=rce_user
 spring.datasource.password=37552109
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/rce
+spring.datasource.url=jdbc:mysql://localhost:3306/rce
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
