--- a/config/system/db.properties
+++ b/config/system/db.properties
@@ -1,4 +1,4 @@
-spring.datasource.username=rce_user
+spring.datasource.username=barilo
 spring.datasource.password=37552109
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
